@@ -1,5 +1,5 @@
 [tox]
-envlist=py31,py27,py26,py25,py24
+envlist=py27,py26,py25,py24,py31,docs
 
 [tox:hudson]
 sdistsrc={distshare}/tox-*
